[gd_scene load_steps=4 format=3 uid="uid://c85t8v3sn5img"]

[ext_resource type="Script" uid="uid://ciytw4q6r5ao8" path="res://scenes/cut_scene/cut_scene.gd" id="1_ae22b"]
[ext_resource type="Texture2D" uid="uid://feexl8pgtyyw" path="res://assets/images/Bez tytu≈Çu.png" id="2_ae22b"]
[ext_resource type="PackedScene" uid="uid://burolo2diuyus" path="res://scenes/cut_scene/hider.tscn" id="3_rswji"]

[node name="CutScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ae22b")

[node name="Panel" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -536.5
offset_right = 960.0
offset_bottom = 536.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ae22b")

[node name="Control" parent="." instance=ExtResource("3_rswji")]
layout_mode = 1
offset_right = -1096.0
offset_bottom = -635.0

[node name="Control2" parent="." instance=ExtResource("3_rswji")]
layout_mode = 1
offset_left = 840.0
offset_top = 17.0
offset_right = -101.0
offset_bottom = -628.0

[node name="Control3" parent="." instance=ExtResource("3_rswji")]
layout_mode = 1
offset_left = 79.0
offset_top = 486.0
offset_right = -1300.0
offset_bottom = -43.0

[node name="Control4" parent="." instance=ExtResource("3_rswji")]
layout_mode = 1
offset_left = 621.0
offset_top = 462.0
offset_right = -74.0
offset_bottom = -25.0
